--- a/ChairShopping/Views/Dashboard/Index.cshtml
+++ b/ChairShopping/Views/Dashboard/Index.cshtml
@@ -273,6 +273,14 @@
                                 </p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a asp-action="GetAllFavourits" asp-controller="Dashboard" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                    Favourits
+                                </p>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
 
