--- a/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
+++ b/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@using ChairShopping.Interfaces;
-@model PagedList<Product>
+@model List<Product>
 @using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<ApplicationUser> _SignInManager
 @inject UserManager<ApplicationUser> _UserManager
 
-@if (Model.Items.Count == 0)
+@if (Model.Count == 0)
 {
     <h4 style="color:red;">No Products for this Category</h4>
 }
-@foreach (var items in Model.Items)
+@foreach (var items in Model)
 {
     <!-- Block2 -->
     <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
@@ -67,7 +67,7 @@
 
 
 <!-- Add pagination links -->
-<nav>
+@* <nav>
     <ul lass="pagination justify-content-center">
         @if (Model.HasPreviousPage)
         {
@@ -88,7 +88,7 @@
             </li>
         }
     </ul>
-</nav>
+</nav> *@
 
 
 
